# advent-of-code

./: README.md
2021/: conda-env.yml  day_1.py  day_10.py  day_13.py  day_2.py  day_3.py  day_5.py  day_6.py  day_7.py  day_8.py  day_9.py  day_9_test.py  day_template.py  pyproject.toml
2021/day6/: day_6.py
2021/notebooks/: day_1.ipynb  day_2.ipynb  day_3.ipynb  day_4.ipynb  day_5.ipynb  day_6.ipynb
