[tool.poetry]
name = "\"aoc-2021\""
version = "0.1.0"
description = "\"Advent of Code, 2021\""
authors = ["Jay Johnson <johnson.jayrichard@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.21.4"
scipy = "^1.0.0"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
